# sqlx-docker-rs

./: .gitignore  Cargo.toml  Dockerfile  compose.yaml
.github/workflows/: build.yaml
src/: main.rs
